--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "PrestaShop/modules/blockcustomerprivacy",
-  "description": "Prestashop module blockcustomerprivacy",
+  "name": "PrestaShop/blockcustomerprivacy",
+  "description": "PrestaShop module blockcustomerprivacy",
   "homepage": "https://github.com/PrestaShop/blockcustomerprivacy",
   "license": "AFL - Academic Free License (AFL 3.0)",
   "authors": [
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=5.2"
+    "php": ">=5.3.2"
   },
   "config": {
     "preferred-install": "dist"
